// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Fieldset /> > Default story renders snapshot 1`] = `
<fieldset>
  <legend
    class="_fieldset-legend_0405d0"
  >
    <div
      class="_fieldset-legend__overline_0405d0"
    >
      <label
        class="_label_76755a _label--md_76755a"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Legend
        </span>
      </label>
    </div>
  </legend>
  <div
    class="_fieldset-items_0405d0 fpo"
  >
    <div>
      Fieldset Content (Radio Buttons or Checkboxes)
    </div>
  </div>
</fieldset>
`;

exports[`<Fieldset /> > FieldsetLegend story renders snapshot 1`] = `
<legend
  class="_fieldset-legend_0405d0"
>
  <div
    class="_fieldset-legend__overline_0405d0"
  >
    <label
      class="_label_76755a _label--md_76755a"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Legend
      </span>
    </label>
  </div>
</legend>
`;

exports[`<Fieldset /> > FieldsetLegendOptional story renders snapshot 1`] = `
<legend
  class="_fieldset-legend_0405d0"
>
  <div
    class="_fieldset-legend__overline_0405d0"
  >
    <label
      class="_label_76755a _label--md_76755a"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Legend
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _fieldset-legend__hint_0405d0"
    >
      (Optional)
    </span>
  </div>
</legend>
`;

exports[`<Fieldset /> > FieldsetLegendRequired story renders snapshot 1`] = `
<legend
  class="_fieldset-legend_0405d0"
>
  <div
    class="_fieldset-legend__overline_0405d0"
  >
    <label
      class="_label_76755a _label--md_76755a"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Legend
      </span>
    </label>
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3 _fieldset-legend__hint_0405d0"
    >
      (Required)
    </span>
  </div>
</legend>
`;

exports[`<Fieldset /> > FieldsetLegendWithSubtitle story renders snapshot 1`] = `
<legend
  class="_fieldset-legend_0405d0"
>
  <div
    class="_fieldset-legend__overline_0405d0"
  >
    <label
      class="_label_76755a _label--md_76755a"
    >
      <span
        class="_text_b3eba3 _text--label-md_b3eba3"
      >
        Legend
      </span>
    </label>
  </div>
  <div
    class="_field-note_fd2e78"
  >
    <span
      class="_text_b3eba3 _text--body-sm_b3eba3"
    >
      With additional Subtitle
    </span>
  </div>
</legend>
`;

exports[`<Fieldset /> > WithCheckboxes story renders snapshot 1`] = `
<fieldset>
  <legend
    class="_fieldset-legend_0405d0"
  >
    <div
      class="_fieldset-legend__overline_0405d0"
    >
      <label
        class="_label_76755a _label--md_76755a"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Critical Fieldset
        </span>
      </label>
    </div>
    <div
      class="_field-note_fd2e78"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some extra descriptive text
      </span>
    </div>
  </legend>
  <div
    class="_fieldset-items_0405d0"
  >
    <div
      class="_checkbox_2d475f"
    >
      <input
        class="_checkbox__input_2d475f"
        id=":r0:"
        name="test-checkbox"
        type="checkbox"
      />
      <div
        class="_checkbox__labels_2d475f"
      >
        <label
          class="_label_f9fc7e"
          for=":r0:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Checkbox
          </span>
           
        </label>
      </div>
    </div>
    <div
      class="_checkbox_2d475f"
    >
      <input
        class="_checkbox__input_2d475f"
        id=":r1:"
        name="test-checkbox"
        type="checkbox"
      />
      <div
        class="_checkbox__labels_2d475f"
      >
        <label
          class="_label_f9fc7e"
          for=":r1:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Checkbox
          </span>
           
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`<Fieldset /> > WithCriticalFootNote story renders snapshot 1`] = `
<fieldset>
  <legend
    class="_fieldset-legend_0405d0"
  >
    <div
      class="_fieldset-legend__overline_0405d0"
    >
      <label
        class="_label_76755a _label--md_76755a"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Critical Fieldset
        </span>
      </label>
    </div>
    <div
      class="_field-note_fd2e78"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some extra descriptive text
      </span>
    </div>
  </legend>
  <div
    class="_fieldset-items_0405d0 fpo flex-col"
  >
    <div>
      Fieldset Content (Radio Button or Checkbox)
    </div>
    <div>
      Fieldset Content (Radio Button or Checkbox)
    </div>
    <div>
      Fieldset Content (Radio Button or Checkbox)
    </div>
  </div>
</fieldset>
`;

exports[`<Fieldset /> > WithDisabledCheckboxes story renders snapshot 1`] = `
<fieldset>
  <legend
    aria-disabled="true"
    class="_fieldset-legend_0405d0 _fieldset-legend--disabled_0405d0"
  >
    <div
      class="_fieldset-legend__overline_0405d0"
    >
      <label
        aria-disabled="true"
        class="_label_76755a _label--md_76755a _label--disabled_76755a"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Critical Fieldset
        </span>
      </label>
    </div>
    <div
      aria-disabled="true"
      class="_field-note_fd2e78 _field-note--disabled_fd2e78"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some extra descriptive text
      </span>
    </div>
  </legend>
  <div
    class="_fieldset-items_0405d0"
  >
    <div
      class="_checkbox_2d475f"
    >
      <input
        class="_checkbox__input_2d475f"
        disabled=""
        id=":r2:"
        name="test-checkbox"
        type="checkbox"
      />
      <div
        class="_checkbox__labels_2d475f"
      >
        <label
          class="_label_f9fc7e _label--disabled_f9fc7e"
          for=":r2:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Checkbox
          </span>
           
        </label>
      </div>
    </div>
    <div
      class="_checkbox_2d475f"
    >
      <input
        class="_checkbox__input_2d475f"
        disabled=""
        id=":r3:"
        name="test-checkbox"
        type="checkbox"
      />
      <div
        class="_checkbox__labels_2d475f"
      >
        <label
          class="_label_f9fc7e _label--disabled_f9fc7e"
          for=":r3:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Checkbox
          </span>
           
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`<Fieldset /> > WithDisabledRadioButton story renders snapshot 1`] = `
<fieldset>
  <legend
    aria-disabled="true"
    class="_fieldset-legend_0405d0 _fieldset-legend--disabled_0405d0"
  >
    <div
      class="_fieldset-legend__overline_0405d0"
    >
      <label
        aria-disabled="true"
        class="_label_76755a _label--md_76755a _label--disabled_76755a"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Critical Fieldset
        </span>
      </label>
    </div>
    <div
      aria-disabled="true"
      class="_field-note_fd2e78 _field-note--disabled_fd2e78"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some extra descriptive text
      </span>
    </div>
  </legend>
  <div
    class="_fieldset-items_0405d0"
  >
    <div
      class="_radio_4c3e9c"
    >
      <span
        class="_input__wrapper_4c3e9c _input__wrapper--disabled_4c3e9c"
      >
        <input
          class="_radio__input_4c3e9c"
          disabled=""
          id=":r8:"
          name="test-radio"
          type="radio"
        />
        <span
          class="_radio__container_4c3e9c"
        />
        <span
          class="_radio__selected_4c3e9c"
        />
      </span>
      <div
        class="_radio__labels_4c3e9c"
      >
        <label
          class="_label_f9fc7e _label--disabled_f9fc7e"
          for=":r8:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Radio Button
          </span>
           
        </label>
      </div>
    </div>
    <div
      class="_radio_4c3e9c"
    >
      <span
        class="_input__wrapper_4c3e9c _input__wrapper--disabled_4c3e9c"
      >
        <input
          class="_radio__input_4c3e9c"
          disabled=""
          id=":r9:"
          name="test-radio"
          type="radio"
        />
        <span
          class="_radio__container_4c3e9c"
        />
        <span
          class="_radio__selected_4c3e9c"
        />
      </span>
      <div
        class="_radio__labels_4c3e9c"
      >
        <label
          class="_label_f9fc7e _label--disabled_f9fc7e"
          for=":r9:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Radio Button
          </span>
           
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`<Fieldset /> > WithErrorCheckboxes story renders snapshot 1`] = `
<fieldset>
  <legend
    class="_fieldset-legend_0405d0"
  >
    <div
      class="_fieldset-legend__overline_0405d0"
    >
      <label
        class="_label_76755a _label--md_76755a"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Critical Fieldset
        </span>
      </label>
    </div>
    <div
      class="_field-note_fd2e78"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some extra descriptive text
      </span>
    </div>
  </legend>
  <div
    class="_fieldset-items_0405d0"
  >
    <div
      class="_checkbox_2d475f _checkbox--error_2d475f"
    >
      <input
        class="_checkbox__input_2d475f"
        id=":r4:"
        name="test-checkbox"
        type="checkbox"
      />
      <div
        class="_checkbox__labels_2d475f"
      >
        <label
          class="_label_f9fc7e"
          for=":r4:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Checkbox
          </span>
           
        </label>
      </div>
    </div>
    <div
      class="_checkbox_2d475f _checkbox--error_2d475f"
    >
      <input
        class="_checkbox__input_2d475f"
        id=":r5:"
        name="test-checkbox"
        type="checkbox"
      />
      <div
        class="_checkbox__labels_2d475f"
      >
        <label
          class="_label_f9fc7e"
          for=":r5:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Checkbox
          </span>
           
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`<Fieldset /> > WithErrorRadioButton story renders snapshot 1`] = `
<fieldset>
  <legend
    class="_fieldset-legend_0405d0"
  >
    <div
      class="_fieldset-legend__overline_0405d0"
    >
      <label
        class="_label_76755a _label--md_76755a"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Critical Fieldset
        </span>
      </label>
    </div>
    <div
      class="_field-note_fd2e78"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some extra descriptive text
      </span>
    </div>
  </legend>
  <div
    class="_fieldset-items_0405d0"
  >
    <div
      class="_radio_4c3e9c _radio--error_4c3e9c"
    >
      <span
        class="_input__wrapper_4c3e9c"
      >
        <input
          class="_radio--error_4c3e9c _radio__input_4c3e9c"
          id=":ra:"
          name="test-radio"
          type="radio"
        />
        <span
          class="_radio__container_4c3e9c"
        />
        <span
          class="_radio__selected_4c3e9c"
        />
      </span>
      <div
        class="_radio__labels_4c3e9c"
      >
        <label
          class="_label_f9fc7e"
          for=":ra:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Radio Button
          </span>
           
        </label>
      </div>
    </div>
    <div
      class="_radio_4c3e9c _radio--error_4c3e9c"
    >
      <span
        class="_input__wrapper_4c3e9c"
      >
        <input
          class="_radio--error_4c3e9c _radio__input_4c3e9c"
          id=":rb:"
          name="test-radio"
          type="radio"
        />
        <span
          class="_radio__container_4c3e9c"
        />
        <span
          class="_radio__selected_4c3e9c"
        />
      </span>
      <div
        class="_radio__labels_4c3e9c"
      >
        <label
          class="_label_f9fc7e"
          for=":rb:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Radio Button
          </span>
           
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`<Fieldset /> > WithRadioButton story renders snapshot 1`] = `
<fieldset>
  <legend
    class="_fieldset-legend_0405d0"
  >
    <div
      class="_fieldset-legend__overline_0405d0"
    >
      <label
        class="_label_76755a _label--md_76755a"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Critical Fieldset
        </span>
      </label>
    </div>
    <div
      class="_field-note_fd2e78"
    >
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3"
      >
        Some extra descriptive text
      </span>
    </div>
  </legend>
  <div
    class="_fieldset-items_0405d0"
  >
    <div
      class="_radio_4c3e9c"
    >
      <span
        class="_input__wrapper_4c3e9c"
      >
        <input
          class="_radio__input_4c3e9c"
          id=":r6:"
          name="test-radio"
          type="radio"
        />
        <span
          class="_radio__container_4c3e9c"
        />
        <span
          class="_radio__selected_4c3e9c"
        />
      </span>
      <div
        class="_radio__labels_4c3e9c"
      >
        <label
          class="_label_f9fc7e"
          for=":r6:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Radio Button
          </span>
           
        </label>
      </div>
    </div>
    <div
      class="_radio_4c3e9c"
    >
      <span
        class="_input__wrapper_4c3e9c"
      >
        <input
          class="_radio__input_4c3e9c"
          id=":r7:"
          name="test-radio"
          type="radio"
        />
        <span
          class="_radio__container_4c3e9c"
        />
        <span
          class="_radio__selected_4c3e9c"
        />
      </span>
      <div
        class="_radio__labels_4c3e9c"
      >
        <label
          class="_label_f9fc7e"
          for=":r7:"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Radio Button
          </span>
           
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;
